	  such a server can disable it by setting the environment
	  variable R_DISABLE_HTTPD to a non-empty value.  This
	  disables help.start() and HTML help (so text help is shown
	  instead).

	- The Java/Javascript search engine has been replaced by an
	  HTML interface to help.search().  help.start() no longer has
	  an argument 'searchEngine' as it is no longer needed.

	- Details may change before release.


NEW FEATURES

    o	polygon(), pdf() and postscript() now have a parameter
	'fillOddEven' (default FALSE), which controls the mode used for
	polygon fills of self-intersecting shapes.

    o	New debugonce() function; further,
	getOption("deparse.max.lines") is now observed when debugging,
	from a code suggestion by John Brzustowski.  (PR#13647/8)

    o	plot() methods for "stepfun" and hence "ecdf" no longer plot
	points by default for n >= 1000.

    o	[g]sub(*, perl=TRUE) now also supports '\E' in order to *end*
	\U and \L case changes, thanks to a patch from Bill Dunlap.

    o	factor(), `levels<-`(), etc, now ensure that the resulting factor
	levels are unique (as was always the implied intention).  Factors
	with duplicated levels are still constructible by low-level means,
	but are now declared illegal.

    o	New print() (S3) method for class "function", also used for
	auto-printing.	Further, .Primitive functions now print and
	auto-print identically.	 The new method is based on code
	suggestions by Romain François.

    o	The print() and toLatex() methods for class "sessionInfo" now
	show the locale in a nicer format and have arguments to
	suppress locale information.

    o	In addition to previously only round(), there are other 'Math'
	group (S3) methods for 'difftime', such as floor(), signif(),
	abs(), etc.

    o	For completeness, old.packages() and available.packages() allow
	'type' to be specified (you could always specify 'available'
	or 'contriburl').

    o	available.packages() by default only returns information on